chore(vs code): corrige configuraões do vs code e acrescenta scene "main" ao invés de "title".

--- a/src/aula_04/.vscode/launch.json
+++ b/src/aula_04/.vscode/launch.json
@@ -12,7 +12,9 @@
             "debug_collisions": false,
             "debug_paths": false,
             "debug_navigation": false,
-            "additional_options": ""
+            "additional_options": "",
+            "address": "127.0.0.1",
+	        "port": 6007
         }
     ]
 }
